--- a/src/templates/post.module.scss
+++ b/src/templates/post.module.scss
@@ -1,5 +1,109 @@
+$main-color: #2948ff;
+$main-color2: #396afc;
+//$sub-color: #a5fecb;
+$sub-color: #bf80ff;
+
 .blogPost {
-	* {
-		
-	}
+  width: 50%;
+	margin-left: 14vw;
+  margin-right: 5vw;
+
+	h1,
+  h2,
+  h3 {
+    padding-top: 10px;
+    line-height: 1.5;
+  }
+	h1 {
+    width: 90%;
+    padding-bottom: 8px;
+    font-size: 4rem;
+    border-bottom: 7px solid $main-color2;
+    margin-top: 50px;
+    margin-bottom: 30px;
+  }
+	h2 {
+    font-size: 3.3rem;
+    margin: 50px 0 20px;
+    border-left: 10px solid $main-color2;
+    padding: 8px 0 8px 2rem;
+  }
+  h3 {
+    font-size: 2.8rem;
+    margin: 30px 0 20px;
+  }
+
+  p {
+    margin-bottom: 15px;
+    font-size: 1.75rem;
+    letter-spacing: 0.5px;
+    line-height: 1.65;
+    text-indent: .8rem;
+  }
+
+  blockquote {
+    position: relative;
+    width: 90%;
+    margin-top: 12px;
+    margin-left: 1rem;
+    margin-bottom: 12px;
+    padding: 2% 2% 1% 6%;
+    background-color: #eee;
+    border-radius: 3px;
+    box-shadow: 0 0 1.5px 1.5px #ddd;
+    color: #666;
+    &::before {
+      position: absolute;
+      line-height: 30px;
+      text-align: center;
+      top: 25%;
+      left: 1rem;
+      content: "❝";
+      color: #999;
+      font-size: 6rem;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+	.blogPost {
+		width: 95%;
+		margin: 0 auto;
+
+		h1 {
+      width: 100%;
+      font-size: 2.6rem;
+      margin: 30px 0 20px;
+    }
+    h2 {
+      font-size: 2.1rem;
+      line-height: 1.3;
+      border-left: 7px solid $main-color2;
+      padding: 4px 0 4px 1.2rem;
+      margin: 45px 0 20px;
+    }
+    h3 {
+      font-size: 1.8rem;
+      line-height: 1.5;
+      padding: 3px 0;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.5rem;
+      line-height: 1.7;
+      margin-bottom: 10px;
+    }
+	}	
+}
+
+.tableOfContent {
+	width: 30%;
+	border: 1px solid $main-color;
+}
+
+@media screen and (max-width: 768px) {
+	.tableOfContent {
+		display: none;
+	}	
 }
