--- a/src/global.scss
+++ b/src/global.scss
@@ -35,3 +35,72 @@ html {
     box-shadow: 0 0 5px 5px #eee !important;
   }
 }
+
+.language-text {
+  color: #444 !important;
+  background: #ddd !important;
+}
+
+.gatsby-highlight {
+  width: 93%;
+  background-color: #444;
+  border-radius: 0 .3rem .3rem .3rem;
+  margin: 0 0 50px;
+  padding: .6em;
+  overflow: auto;
+  font-size: 1.6rem;
+}
+
+// 協調行
+.gatsby-highlight-code-line {
+  background-color: #066;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #066;
+}
+
+.gatsby-highlight pre[class*="language-"] {
+  background-color: transparent;
+  margin: 0;
+  padding: 0;
+  overflow: initial;
+  float: left;
+  //min-width: 100%; なにこれ?
+}
+
+.gatsby-highlight pre[class*="language-"].line-numbers {
+  padding-left: 2.5em; 
+}
+
+@media screen and (max-width: 768px) {
+  .gatsby-highlight {
+    font-size: 1.3rem;
+    margin: 20px 0 25px;
+  }
+}
+
+.gatsby-code-title {
+  //background: $main-color2;
+  color: #ddd;
+  margin-top: 35px;
+  margin-bottom: -0.65em;
+  padding: 1.5rem 1.8rem 2rem;
+  font-size: 1.6rem;
+  line-height: 0.2;
+  font-family: SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;
+  font-weight: 400;
+  border-radius: 3px 3px 0 0;
+  display: table;
+}
+
+@media screen and (max-width: 768px) {
+  .gatsby-code-title {
+    padding: 1.2rem 1.5rem 1rem;
+    margin-top: 20px;
+    margin-bottom: -2rem;
+    font-size: 1.4rem;
+  }
+}
