--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -18,12 +18,8 @@ html {
     sans-serif;
 }
 
-.wrapper {
-  animation: fadeIn .5s ease 0s 1 normal;
-
-  @media only screen and (max-width: 620px) {
-    margin: 0 16px
-  }
+.LoadAnimation {
+  animation: fadeIn 1s ease 0s 1 normal;
 
   @keyframes fadeIn {
     0% { opacity: 0 }
@@ -36,8 +32,7 @@ html {
   }
 }
 
-.wrapper {
-  border: 1px solid red;
+.LoadAnimation {
   display: flex;
   justify-content: center;
 }
