--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -22,19 +22,18 @@
     background: linear-gradient(90deg, $main-color, $sub-color);
     -webkit-background-clip: text;
     -webkit-text-fill-color: rgba(255,255,255,0.0);
-    margin-bottom: 20px;
+    margin: 15px 0;
     font-size: 3.3rem;
     font-weight: 100;
     letter-spacing: 1px;
     line-height: 1.5;
-		margin-top: 0;
 	}
 
 	.dateInfo {
     display: flex;
     flex-wrap: wrap;
     font-size: 1.7rem;
-		margin-bottom: 0;
+		margin-bottom: 10px;
     p {
       margin-right: 30px;
 			margin-bottom: 0;
@@ -56,6 +55,37 @@
     }
     p {
       margin-right: 20px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .postInfo {
+    width: 87%;
+    margin: 50px auto 0;
+
+    .category {
+      font-size: 1.5rem;
+      margin-bottom: 15px;
+    }
+
+    .postTitle {
+      font-size: 2.4rem;
+      font-weight: 400;
+    }
+
+    .dateInfo {
+      font-size: 1.5rem;
+      p {
+        margin-bottom: 10px;
+      }
+    }
+
+    .tags {
+      font-size: 1.5rem;
+    }
+    .description {
+      font-size: 1.4rem;
     }
   }
 }
