--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -45,7 +45,7 @@
 
 	.tags {
     display: flex;
-    //flex-wrap: wrap;
+    flex-wrap: wrap;
 		align-items: center;
     flex-direction: row;
     font-size: 1.8rem;
@@ -64,9 +64,8 @@
     width: 87%;
     margin: 50px auto 0;
 
-    .category {
+    .series {
       font-size: 1.5rem;
-      margin-bottom: 15px;
     }
 
     .postTitle {
