--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -82,6 +82,28 @@ $sub-color: #bf80ff;
     }
   }
 
+  table {
+    margin: 40px 0;
+    tr {
+      th {
+        border: 1px solid #bbb;
+        padding: 10px 15px;
+        background: $main-color2;
+        font-size: 1.7rem;
+        font-weight: 400;
+        color: #fff;
+        line-height: 1.3;
+        vertical-align: middle;
+      }
+      td {
+        padding: 10px 20px;
+        font-size: 1.7rem;
+        border: 1px solid #bbb;
+        line-height: 1.3;
+      }
+    }
+  }
+
   aside {
     padding: 18px 30px;
     margin-bottom: 20px;
@@ -96,7 +118,7 @@ $sub-color: #bf80ff;
 
 @media screen and (max-width: 768px) {
 	.blogPost {
-		width: 95%;
+		width: 90%;
 		margin: 0 auto;
 
 		h1 {
@@ -130,6 +152,24 @@ $sub-color: #bf80ff;
         font-size: 1.4rem;
       }
     }
+    table {
+      display: block;
+      overflow-x: scroll;
+      white-space: nowrap;
+      -webkit-overflow-scrolling: touch;
+      margin: 30px auto;
+      tr {
+        th {
+          padding: 5px 8px;
+          font-size: 1.5rem;
+        }
+        td {
+          padding: 5px 8px;
+          font-size: 1.4rem;
+        }
+      }
+    }
+
     aside {
       padding: 10px 15px;
       width: 88%;
