--- a/src/styles/pageinfo.module.scss
+++ b/src/styles/pageinfo.module.scss
@@ -1,11 +1,11 @@
 .countInfo {
-  margin: 30px auto;
+  margin: 0 auto 50px;
   font-size: 2.2rem;
   text-align: center;
   .page {
-    margin: 20px 0 25px;
+    margin: 0px 0 5px;
     span {
-      font-size: 3.2rem;
+      font-size: 3.5rem;
     }
   }
 }
@@ -16,7 +16,7 @@
     .page {
       margin: 10px 0 15px;
       span {
-        font-size: 2.2rem;
+        font-size: 2.3rem;
       }
     }
   }
