--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -3,6 +3,7 @@
 .footer {
   background: #444;
   color: #ccc;
+  margin-top: 100px;
   padding-top: 50px;
   padding-bottom: 50px;
 	line-height: 1.5;
