--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -1,7 +1,4 @@
-$main-color: #2948ff;
-$main-color2: #396afc;
-//$sub-color: #a5fecb;
-$sub-color: #bf80ff;
+@import "../scss/variables";
 
 .blogPost {
   width: 50%;
