--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -117,7 +117,8 @@ html {
 }
 
 .warn {
-  padding: 18px 30px;
+  position: relative;
+  padding: 18px 20px;
   margin-bottom: 20px;
   width: 90%;
   border-radius: 3px;
@@ -125,4 +126,15 @@ html {
   font-size: 1.6rem;
   line-height: 1.6;
   box-shadow: 0 0 1.5px 1.5px rgba($warn, 0.25);
+  z-index: 0;
+
+  &::before {
+    content: "💡";
+    top: 50%;
+    font-size: 2rem;
+    transform: translateY(-50%);
+    position: absolute;
+    z-index: 1;
+    
+  }
 }
