--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -118,23 +118,47 @@ html {
 
 .warn {
   position: relative;
-  padding: 18px 20px;
+  padding: 18px 30px 18px 60px ;
   margin-bottom: 20px;
-  width: 90%;
+  width: 80%;
   border-radius: 3px;
-  background-color: rgba($warn, 0.2);
-  font-size: 1.6rem;
-  line-height: 1.6;
-  box-shadow: 0 0 1.5px 1.5px rgba($warn, 0.25);
-  z-index: 0;
-
+  background-color: rgba(red, 0.15);
+  box-shadow: 0 0 1.5px 1.5px rgba(red, 0.2);
+  p {
+    margin: 0;
+    font-size: 1.6rem;
+    line-height: 1.6;
+  }
   &::before {
-    content: "💡";
+    content: "❕";
     top: 50%;
     font-size: 2rem;
+    line-height: 1.6;
     transform: translateY(-50%);
     position: absolute;
     z-index: 1;
-    
+    margin-left: -50px;
+    background-color: rgba(red, .4);
+    border-radius: 100%;
+    height: 3.5rem;
+    width: 3.5rem;
+    text-align: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .warn {
+    padding: 10px 15px 10px 50px;
+    width: 80%;
+    p {
+      font-size: 1.3rem;
+      line-height: 1.5;
+    }
+    &::before {
+      font-size: 1.5rem;
+      height: 2.5rem;
+      width: 2.5rem;
+      margin-left: -40px;
+    }
   }
 }
