--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -33,7 +33,7 @@
     display: flex;
     flex-wrap: wrap;
     font-size: 1.7rem;
-		margin-bottom: 10px;
+		margin-bottom: 15px;
     p {
       margin-right: 30px;
 			margin-bottom: 0;
@@ -82,6 +82,12 @@
 
     .tags {
       font-size: 1.5rem;
+      svg {
+        margin-bottom: 10px;
+      }
+      p {
+        margin-bottom: 10px;
+      }
     }
     .description {
       font-size: 1.4rem;
