--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -121,7 +121,7 @@
       position: absolute;
       z-index: 1;
       margin-left: -50px;
-      background-color: rgba($main-color2, .4);
+      background-color: rgba($main-color2, .3);
       border-radius: 100%;
       height: 3.5rem;
       width: 3.5rem;
@@ -226,6 +226,8 @@
     border: 2px solid #bbb;
     border-radius: 3px;
     padding: 15px 19px 5px;
+    color: #444;
+    text-decoration: none;
 
     &:hover {
       color: inherit;
