--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -128,6 +128,13 @@
       text-align: center;
     }
   }
+  details {
+    font-size: 1.6rem;
+    padding-left: 10px;
+    summary {
+      margin-bottom: 10px;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
