--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -1,3 +1,5 @@
+@import "../scss/variables";
+
 .main {
 	width: 50%;
 	margin: 100px auto;
@@ -9,9 +11,16 @@
 	}
 	p {
 		margin-bottom: 10px;
-		font-size: 1.6rem;
+		font-size: 1.9rem;
 		letter-spacing: 0.5px;
 		text-indent: .8rem;
+		line-height: 1.6;
+		a {
+			color: #444;
+			&:hover {
+				color: $main-color;
+			}
+		}
 	}
 }
 
