--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -2,16 +2,21 @@
 
 .main {
 	width: 50%;
-	margin: 100px auto;
+	margin: 80px auto;
 
 	h2 {
-		margin-bottom: 50px;
-		font-size: 3rem;
+		margin: 70px 0 40px;
+		font-size: 3.2rem;
 		text-align: center;
+	}
+	h3 {
+		margin: 40px 0 20px;
+		font-size: 2.5rem;
+		line-height: 1.5;
 	}
 	p {
 		margin-bottom: 10px;
-		font-size: 1.9rem;
+		font-size: 1.8rem;
 		letter-spacing: 0.5px;
 		text-indent: .8rem;
 		line-height: 1.6;
@@ -20,6 +25,19 @@
 			&:hover {
 				color: $main-color;
 			}
+		}
+	}
+	ul {
+		width: 80%;
+		margin: 20px 10px;
+		padding: 20px 25px;
+		border: 1px dotted #aaa;
+		border-radius: 2px;
+		list-style: none;
+		li {
+			margin-bottom: 15px;
+			font-size: 1.7rem;
+			line-height: 1.5;
 		}
 	}
 }
@@ -32,6 +50,20 @@
 		h2 {
 			margin-bottom: 30px;
 			font-size: 2.5rem;
+		}
+		h3 {
+			font-size: 2rem;
+		}
+		p {
+			font-size: 1.65rem;
+		}
+		ul {
+			margin: 20px auto;
+			width: 88%;
+			padding: 15px 20px;
+			li {
+				font-size: 1.5rem;
+			}
 		}
 	}
 }
