--- a/src/styles/404.module.scss
+++ b/src/styles/404.module.scss
@@ -1,11 +1,25 @@
 @import "../scss/variables";
 
+.dateInfo {
+	text-align: center;
+	font-size: 1.8rem;
+	font-weight: 900;
+
+	svg {
+		margin-right: 8px;
+	}
+	time {
+		margin-left: 25px;
+		font-weight: 700;
+	}
+}
+
 .main {
 	width: 50%;
-	margin: 80px auto;
+	margin: 50px auto 100px;
 
 	h2 {
-		margin: 70px 0 40px;
+		margin: 80px 0 40px;
 		font-size: 3.2rem;
 		text-align: center;
 	}
