--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -92,22 +92,16 @@
 
     .dateInfo {
       font-size: 1.5rem;
-      p {
-        margin-bottom: 10px;
-      }
+      margin-bottom: 10px;
     }
 
     .tags {
       font-size: 1.5rem;
-      svg {
         margin-bottom: 10px;
-      }
-      p {
-        margin-bottom: 10px;
-      }
     }
     .description {
-      font-size: 1.4rem;
+      width: 98%;
+      font-size: 1.35rem;
     }
   }
 }
