--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -33,8 +33,8 @@
 	.dateInfo {
     display: flex;
     flex-wrap: wrap;
-    font-size: 1.7rem;
 		margin-bottom: 15px;
+    font-size: 1.7rem;
     p {
       margin-right: 30px;
 			margin-bottom: 0;
@@ -46,12 +46,11 @@
 
 	.tags {
     display: flex;
-    flex-wrap: wrap;
-		align-items: center;
     flex-direction: row;
+		align-items: center;
+    flex-wrap: wrap;
+    margin: 0 0 12px;
     font-size: 1.8rem;
-		margin-top: 0;
-		margin-bottom: 12px;
     svg {
 			margin-right: 10px;
     }
@@ -67,9 +66,9 @@
     }
   }
   .description {
+    width: 90%;
     font-size: 1.7rem;
     line-height: 1.5;
-    width: 90%;
     svg {
       margin-right: 10px;
     }
@@ -96,8 +95,11 @@
     }
 
     .tags {
+      margin-bottom: 10px;
       font-size: 1.5rem;
-        margin-bottom: 10px;
+      p {
+        line-height: 1.5;
+      }
     }
     .description {
       width: 98%;
