--- a/src/styles/postInfo.module.scss
+++ b/src/styles/postInfo.module.scss
@@ -37,7 +37,6 @@
     font-size: 1.7rem;
     p {
       margin-right: 30px;
-			margin-bottom: 0;
       svg {
         margin-right: 10px;
       }
@@ -92,8 +91,10 @@
     .dateInfo {
       font-size: 1.5rem;
       margin-bottom: 10px;
+      p:not(:last-child) {
+        margin-bottom: 8px;
+      }
     }
-
     .tags {
       margin-bottom: 10px;
       font-size: 1.5rem;
