🎨 デザインを修正

--- a/src/styles/series.module.scss
+++ b/src/styles/series.module.scss
@@ -4,16 +4,15 @@
 .tagsMain {
   width: 55vw;
   margin: 70px auto 100px;
-  padding: 50px;
+  padding: 50px 0;
   .seriesList,
   .tagList {
     display: flex;
     list-style: none;
     justify-content: flex-start;
     flex-wrap: wrap;
+    gap: 10px;
     .listItem {
-      margin-right: 10px;
-      margin-bottom: 15px;
       a {
         display: block;
         padding: 8px 15px;
@@ -41,12 +40,13 @@
 @media screen and (max-width: 768px) {
   .seriesMain,
   .tagsMain {
-    width: 88vw;
+    width: 91vw;
+    margin: 40px auto 70px;
+    padding: 20px 0;
     .seriesList,
     .tagList {
+      gap: 8px;
       .listItem {
-        margin-right: 8px;
-        margin-bottom: 12px;
         a {
           padding: 6px 10px;
           font-size: 1.2rem;
