🎨 テーマカラーを変更

--- a/src/styles/footer.module.scss
+++ b/src/styles/footer.module.scss
@@ -9,8 +9,9 @@
 	line-height: 1.5;
   a {
     color: #ccc;
+    transition-duration: 0.1s;
     &:hover {
-      color: $main-color;
+      color: $main-color2;
     }
   }
   hgroup {
