--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,5 @@
-$main-color: #2948ff;
-$main-color2: #396afc;
-$sub-color: #bf80ff;
+$main-color: #49aeff;
+$main-color2: #2786dd;
+$sub-color: #ff4c89;
 
 $warn: red
