--- a/src/styles/post.module.scss
+++ b/src/styles/post.module.scss
@@ -105,8 +105,8 @@
     margin-bottom: 20px;
     width: 80%;
     border-radius: 3px;
-    background-color: rgba($main-color2, 0.15);
-    box-shadow: 0 0 1.5px 1.5px rgba($main-color2, 0.2);
+    background-color: rgba(#396afc, 0.15);
+    box-shadow: 0 0 1.5px 1.5px rgba(#396afc, 0.25);
     p {
       margin: 0;
       font-size: 1.6rem;
@@ -121,7 +121,7 @@
       position: absolute;
       z-index: 1;
       margin-left: -50px;
-      background-color: rgba($main-color2, .3);
+      background-color: rgba(#396afc, 0.3);
       border-radius: 100%;
       height: 3.5rem;
       width: 3.5rem;
