--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -1,21 +1,30 @@
 .main {
   width: 60%;
-  margin: 0 auto;
-  border: 1px solid red;
-  .image {
-    margin: 50px auto;
-    width: 40%;
-  }
-  ul {
-    list-style: none;
-    li {
-      height: 30vh;
-      text-align: center;
-      .link {
-        font-size: 2rem;
-        text-align: center;
-        margin: 0 auto;
-      }
+  margin: 80px auto;
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  .box {
+    border: 2px solid #ddd;
+    width: 17vw;
+    height: 17vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    text-align: center;
+    text-decoration: none;
+    svg {
+      display: block;
+      color: #444;
+      font-size: 5rem;
+    }
+    span {
+      color: #444;
+      font-size: 2.5rem;
+    }
+    &:hover {
     }
   }
 }
