--- a/src/styles/index.module.scss
+++ b/src/styles/index.module.scss
@@ -31,12 +31,12 @@
       svg {
         color: $main-color2;
       }
-    span {
-        color: #ACB6E5;//非対応のブラウザでの文字色を設定
-        background: -webkit-linear-gradient(0deg, $main-color2, $sub-color);//背景色にグラデーションを指定
-        -webkit-background-clip: text;//テキストでくり抜く
-        -webkit-text-fill-color: transparent;//くり抜いた部分は背景を表示
-    }
+      span {
+        color: #ACB6E5;
+        background: -webkit-linear-gradient(0deg, $main-color2, $sub-color);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+      }
     }
   }
 }
