--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -18,10 +18,10 @@
     background-image: linear-gradient(#e8e8e8 0%, #d6d6d6 100%);
     box-shadow: inset 0 2px 0 rgba(255,255,255,0.2), 0 2px 2px rgba(0, 0, 0, 0.1);
     border-bottom: solid 2px #b5b5b5;
+    cursor: pointer;
     &:hover {
       background-color: #ededed;
     }
-    cursor: pointer;
     span {
       position: absolute;
       top: 50%;
@@ -59,8 +59,10 @@
           color: #fff;
           font-size: 1.55rem;
           font-weight: 900;
+          letter-spacing: 1px;
+          line-height: 1.4;
           span {
-            color: rgba(red, 0.6);
+            color: rgba(red, 0.5);
           }
         }
         li {
@@ -96,6 +98,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 160%;
+        max-height: 60vh;
         ul {
           li {
             margin-bottom: 8px;
