--- a/src/styles/search.module.scss
+++ b/src/styles/search.module.scss
@@ -1,3 +1,5 @@
+@import "../scss/variables";
+
 .wrapper {
   position: fixed;
   top: 30px;
@@ -62,7 +64,9 @@
           letter-spacing: 1px;
           line-height: 1.4;
           span {
-            color: rgba(red, 0.5);
+            color: red;
+            font-size: 2rem;
+            font-weight: 500;
           }
         }
         li {
@@ -71,6 +75,10 @@
             color: #fff;
             font-size: 1.65rem;
             line-height: 1.65;
+            transition: 0.1s;
+            &:hover {
+              color: $main-color2;
+            }
           }
         }
       }
